# eurotek

./: pyproject.toml
CoreEurotek/: conftest.py  manage.py  pytest.ini
CoreEurotek/CoreEurotek/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
CoreEurotek/EuroTek/: App.js  app.json  package-lock.json  package.json
CoreEurotek/EuroTek/android/: settings.gradle
CoreEurotek/EuroTek/src/: AppBaseURL.js  capitalize.js
CoreEurotek/eurotek-app/: .eslintrc.js  App.js  app.json  package-lock.json  package.json
CoreEurotek/notifications/: consumers.py  models.py
CoreEurotek/notifications/migrations/: 0001_initial.py  0002_alter_onesignaluserprofile_user.py
CoreEurotek/notifications/tests/: test_websockets.py
CoreEurotek/report/: admin.py  models.py  routers.py  serializers.py  tasks.py  tests.py  urls.py  viewsets.py
CoreEurotek/report/abstract/: models.py
CoreEurotek/report/auth/: admin.py  apps.py  backends.py  otp.py  permissions.py
CoreEurotek/report/comment/: apps.py  middlewares.py  serializers.py  viewsets.py
CoreEurotek/report/fixtures/: comment.py  day_report.py  user.py
CoreEurotek/report/migrations/: 0001_initial.py  0002_alter_dayreport_options_alter_dayreport_type_num.py  0003_alter_dayreport_options_and_more.py  0004_rename_public_uuid_dayreport_public_id.py  0005_alter_dayreport_min_norm_alter_dayreport_total_hours_and_more.py
CoreEurotek/report/notifications/: apps.py  consumers.py  middlewares.py  models.py  serializers.py  viewsets.py
CoreEurotek/report/tests/: test_models.py  test_viewsets.py
CoreEurotek/report/user/: apps.py  (+1 more)
(+61 files in other folders)
